	* Blogger のフィードを JSONP を使って表示する。

2010-06-10: xml2html.xsl,xml2html.xml,xml2html.css [deleted]

	* XSLT で XML を HTML に整形する。

2010-06-09: slideshow.html
	* JSON の画像情報でスライドショーをする。 (requires jQuery)

2010-06-08: slideshow-metainfo-generator.py
	* 画像の情報を JSON 形式で出力する。

2010-06-07: eval-input-text.html
	* textarea に入力したスクリプトを eval する。 (requires jQuery)

2010-06-06: simple-usage-canvas.html
	* Canvas 要素を使ってみる。

2010-05-31: simple-usage-function-ptr.cpp
	* 関数ポインタを使ってみる。

2010-05-30: color-console.cpp
	* コンソールに色づけする。

2010-05-25: icalendar2hcalendar.py [deleted]

	* iCalendar を hCalendar に変換してみる。

2010-05-24: simple-usage-reportlab-table.py
	* ReportLab で表を生成する。

2010-05-22: csv2html.py [deleted]

	* CSV から HTML の <ul> と <table> を作る。

2010-05-21: try-sqlite.py

	* SQLite を使ってみる。

2010-05-18: simple-usage-reportlab-template.py,simple-usage-reportlab-template.txt
	* 差し込み印刷のように PDF を生成する。

2010-05-17: extract-events-from-icalendar.py,extract-events-from-icalendar.ics [deleted]

	* iCalendar から指定した期間のイベントを抽出する。

2010-05-10: csv2htmllist.py [deleted]

	* CSV ファイルから Web サイト用のメニューを作る。

2010-05-06: patch-split.sh
	* パッチファイルを分割する。

2010-05-01: gdata-spredsheets-list.py [deleted]

	* Google Spreadsheets のファイル一覧を取得する。

2010-04-29: count-files-per-suffix.py
	* 拡張子ごとのファイル数を集計する。

2010-04-26: yaml2json.py
	* YAML を JSON に変換する。

2010-04-25: remove-empty-dir.py
	* 空のディレクトリ (隠しファイルひとつのものも含む) を削除する。

2010-04-22: build-python-mysqldb.sh [setup]
	* MySQLdb をインストールする。

2010-04-21: gdata-client-login.py [deleted]

	* Google Data API のクライアントライブラリでログインする。

2010-04-20: gmail-messages-and-labels.py,gmail-messages-and-labels.json
	* Gmail のラベル一覧と INBOX の中身一覧を取得する。設定ファイル必要。

2010-04-18: url-shortener.sh [deleted]

	* "goo.gl" で URL を短縮する。

2010-04-16: svncounts-one-month-commits.sh [deleted]

	* Subversion の直近一ヶ月のコミッタごとのコミット数を表示する。

2010-04-15: setup-macosx-java-version.sh [setup]
	* MacOSX の Java のバージョンを変更する。

2010-04-14: setup-sshkey.sh [deleted]

	* ssh のクライアント側の設定をする。
