@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Shigeru Kitazaki">
-    <title>Sandbox | {{ name }}</title>
+    <title>Sandbox{% if title %} | {{ title }}{% endif %}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -13,6 +13,7 @@
     <!-- Custom styles -->
     <style>
       body {padding-top: 5rem;}
+      {% block style %}{% endblock %}
     </style>
 
     {% if use_css %}
@@ -25,6 +26,7 @@
     </nav>
 
     <main role="main" class="container">
+      <div id="error" class="d-none"></div>
       <div class="main-contents">{% block content %}{% endblock %}</div>
       <hr>
     </main><!-- /main.container -->
@@ -35,5 +37,9 @@
     {% if use_js %}
     <script type="text/javascript" src="{{ url_for('static', filename=name+'.js') }}"></script>
     {% endif %}
+    <script type="text/javascript">
+    'use strict'
+    {% block script %}{% endblock %}
+    </script>
   </body>
 </html>
